--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
   "devDependencies": {
-   "nodemon": "2.0.7"
+    "nodemon": "2.0.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
