--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "@jaames/iro": "^5.5.2",
+    "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^2.4.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
