--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@jaames/iro": "^5.5.2",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^2.4.1",
+    "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
