--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "@jaames/iro": "^5.5.2",
+    "@sendgrid/mail": "^7.4.5",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^2.4.1",
     "csurf": "^1.11.0",
