--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^5.13.0",
-    "nearest-color": "^0.4.4"
+    "nearest-color": "^0.4.4",
+    "puppeteer": "^10.1.0"
   },
   "devDependencies": {
     "nodemon": "2.0.7"
