--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-session": "^1.17.2",
     "mongoose": "^5.13.0",
     "nearest-color": "^0.4.4",
-    "puppeteer": "^10.1.0"
+    "puppeteer": "^10.1.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "2.0.7"
